_includes/manuals/1.6/3.5.4_puppet_reports.md

Foreman uses a custom puppet reports address (similar to tagmail or store) which Puppet will use to upload its report into Foreman.  This enables you to see the reports through the web interface as soon as the client finishes its run.

#### Configuration

##### Client

Ensure that the puppet clients has the following option in their puppet.conf:
<pre>report = true</pre>

Without it, no reports will be sent.

##### Puppet master

First identify the directory containing report processors, e.g.

* EL6 (e.g. RHEL, CentOS): /usr/lib/ruby/site_ruby/1.8/puppet/reports/
* EL7 or Fedora: /usr/share/ruby/vendor_ruby/puppet/reports/
* Debian or Ubuntu: /usr/lib/ruby/vendor_ruby/puppet/reports/
* other OSes, look for tagmail.rb in the Puppet installation (`locate tagmail.rb`)

Copy [the report processor source](https://raw.githubusercontent.com/theforeman/puppet-foreman/master/files/foreman-report_v2.rb) to this report directory and name it `foreman.rb`.

Create a new configuration file at `/etc/puppet/foreman.yaml` containing:
<pre>
---
# Update for your Foreman and Puppet master hostname(s)
:url: "https://foreman.example.com"
:ssl_ca: "/var/lib/puppet/ssl/certs/ca.pem"
:ssl_cert: "/var/lib/puppet/ssl/certs/puppet.example.com.pem"
:ssl_key: "/var/lib/puppet/ssl/private_keys/puppet.example.com.pem"

# Advanced settings
:puppetdir: "/var/lib/puppet"
:puppetuser: "puppet"
:facts: true
:timeout: 10
:threads: null
</pre>

Edit the URL field to point to your Foreman instance, and the SSL fields for the hostname of the Puppet master (which may be the same host.)

Lastly add this report processor to your Puppet master configuration.  In your master puppet.conf under the `[main]` section add:

<pre>reports=log, foreman</pre>

and restart your Puppet master.

You should start seeing reports coming in under the reports link.

##### Debugging reports

If reports aren't showing up in Foreman when an agent is run, there can be a number of reasons.  First check through the above configuration steps, and then look at these places to narrow down the cause:

1. Puppet master logs may show an issue either loading or executing the report processor.  Check syslog (/var/log/messages or syslog) for `puppet-master` messages.
1. /var/log/foreman/production.log should show a `POST "/api/reports"` request each time a report is received, and will end in `Completed 201 Created` when successful.  Check for errors within the block of log messages.
1. When viewing reports in Foreman's UI, be aware that the default search is for "eventful" reports.  Clear the search ('x') to see reports with no changes.

#### Expire reports automatically

You will probably want to delete your reports after some time to limit database growth. To do so, you can set a cronjob:

Available conditions:

* days => number of days to keep reports (defaults to 7)
* status => status of the report (defaults to 0 --> "reports with no errors")

Example:

1. Expires all reports regardless of their status
    <pre>foreman-rake reports:expire days=7</pre>
2. expires all non interesting reports after one day
    <pre>foreman-rake reports:expire days=1 status=0</pre>

